objects/LLC_BI__ClosingChecklist__c.object
<CustomObject>
    <description>The Closing Checklist Object is used to track details about the documents assigned to the closing checklist</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__Approval_Roles__c</fullName>
        <description>This field is optional. This is a semicolon delimited list of roles that are allowed to approve the document. If left blank, all roles can approve the document. This field is limited to 255 characters in length. This field works in tandem with the newer Placeholder Approval Roles field, which can accept more characters.</description>
        <inlineHelpText>Semicolon delimited list of roles that are allowed to approve the document. If left blank all roles can approve the document.</inlineHelpText>
        <label>Approval Roles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Attorney__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not currently used.</description>
        <label>Attorney</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Auto_Esign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. This checkbox, when set to true, can be used to tell a downstream process that this e-signature ready placeholder should automatically appear in Customer Portal once available, rather than requiring a Document Manager user to manually trigger this process.</description>
        <label>Auto E-Sign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Criteria__c</fullName>
        <description>This field is optional. This field allows the use of nFORMS syntax to specify when this particular Closing Checklist record should generate a placeholder on a Document Manager for any given object record.</description>
        <label>Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Document_Id_Mapping__c</fullName>
        <description>Administrators populate this optional text field with a unique ID to map documentation generated by data services to existing placeholders. By default, it is blank.</description>
        <externalId>true</externalId>
        <inlineHelpText>Populate this field to map documentation generated by data services to existing placeholders.</inlineHelpText>
        <label>Document ID Mapping</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__E_Vault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators select this optional boolean field to send a specific document manager closing checklist placeholder for e-vault. By default, it is false. This field only displays when the OneSpan or E-Signature plugin is active.</description>
        <inlineHelpText>Select this field to flag the e-vault placeholder as to-send.</inlineHelpText>
        <label>E-Vault Placeholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__ExpansionLh__c</fullName>
        <description>This field is not currently used.</description>
        <label>ExpansionLh</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__ExpansionRe__c</fullName>
        <description>This field is not currently used.</description>
        <label>ExpansionRe</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Placeholder_Viewer_Groups__c</fullName>
        <description>This field is an optional, semicolon-delimited list that limits the accessibility of a specific document to the public groups added. Access includes the ability to view, download, copy the URL, and track the version history of the document. When left blank, no viewer restrictions are applied based on public groups. This field works in tandem with Placeholder Viewer Roles and Placeholder Viewer Profiles to determine which users can access a document.</description>
        <label>Placeholder Viewer Groups</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Placeholder_Viewer_Profiles__c</fullName>
        <description>This field is an optional, semicolon-delimited list that limits the accessibility of a specific document to the user profiles added. Access includes the ability to view, download, copy the URL, and track the version history of the document. When left blank, no viewer restrictions are applied based on profiles. This field works in tandem with Placeholder Viewer Roles and Placeholder Viewer Groups to determine which users can access a document.</description>
        <label>Placeholder Viewer Profiles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Doc_Description__c</fullName>
        <description>This field is optional. This is the document description that will be displayed to Customer Portal users.</description>
        <label>Portal Doc Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Doc_Name__c</fullName>
        <description>This field is optional. This is the document name that will be displayed to Customer Portal users.</description>
        <label>Portal Doc Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Portal_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. If true, this document will be displayed in Customer Portal.</description>
        <label>Portal Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__RefinanceLh__c</fullName>
        <description>This field is not currently used.</description>
        <label>RefinanceLh</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__RefinanceRe__c</fullName>
        <description>This field is not currently used.</description>
        <label>RefinanceRe</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this optional field. It is a lookup that links the Closing Checklist to a Requirement template.</description>
        <label>Requirement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>LLC_BI__Requirement__c.LLC_BI__Is_Template__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LLC_BI__Requirement__c</referenceTo>
        <relationshipLabel>Closing Checklists</relationshipLabel>
        <relationshipName>Closing_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Start_upLh__c</fullName>
        <description>This field is not currently used.</description>
        <label>Start-upLh</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Start_upRe__c</fullName>
        <description>This field is not currently used.</description>
        <label>Start-upRe</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Viewer_Roles__c</fullName>
        <description>This field is optional. This is a semicolon-delimited list of roles that are allowed to view the document preview and download the document. If left blank, all roles can view and download the document. This field is limited to 255 characters in length. This field is still respected, however, users should start using the newer Placeholder Viewer Roles field, which can accept more characters.</description>
        <inlineHelpText>Semicolon delimited list of roles that are allowed to view the document. If blank all roles can view the document.</inlineHelpText>
        <label>Viewer Roles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__acquisitionLh__c</fullName>
        <description>This field is not currently used.</description>
        <label>Acquisition LH</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__acquisitionRe__c</fullName>
        <description>This field is not currently used.</description>
        <label>Acquisition RE</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__clientView__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not currently used.</description>
        <label>Client View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__comments__c</fullName>
        <description>This field is not currently used.</description>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__docClass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and automatically populated. This field is a lookup to the Doc Class record.</description>
        <label>DocClass</label>
        <referenceTo>LLC_BI__DocClass__c</referenceTo>
        <relationshipLabel>Closing Checklists</relationshipLabel>
        <relationshipName>Closing_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__docManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and automatically populated. This field is a lookup to the DocManager record.</description>
        <label>DocManager</label>
        <referenceTo>LLC_BI__DocManager__c</referenceTo>
        <relationshipLabel>Closing Checklists</relationshipLabel>
        <relationshipName>Closing_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__docTab__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and automatically populated. This field is a lookup to the DocTab record.</description>
        <label>DocTab</label>
        <referenceTo>LLC_BI__DocTab__c</referenceTo>
        <relationshipLabel>Closing Checklists</relationshipLabel>
        <relationshipName>Closing_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__docType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and automatically populated. This field is a lookup to the DocType record.</description>
        <label>DocType</label>
        <referenceTo>LLC_BI__DocType__c</referenceTo>
        <relationshipLabel>Closing Checklists</relationshipLabel>
        <relationshipName>Closing_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__dueDaysPrior__c</fullName>
        <description>This field is not currently used.</description>
        <label>Due Days Prior</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__firstReview__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not currently used.</description>
        <label>First Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>This field is optional and automatically populated. This field is used to house the unique external ID of this record.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__naOk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not currently used.</description>
        <label>NA OK?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__onesToWatch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not currently used.</description>
        <label>Ones to Watch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__owner__c</fullName>
        <description>This field is not currently used.</description>
        <label>Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Closer</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Loan Ops</fullName>
                </value>
                <value>
                    <fullName>Special Assets</fullName>
                </value>
                <value>
                    <fullName>Servicing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__sortOrder__c</fullName>
        <description>This field is not currently used.</description>
        <label>Sort</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDOC__Placeholder_Approval_Roles__c</fullName>
        <description>This field is optional. This is a semicolon-delimited list of roles that are allowed to approve the document. If left blank, all roles can approve the document. This field works in tandem with the older Approval Roles field, which is limited to fewer characters.</description>
        <inlineHelpText>Semicolon delimited list of roles that are allowed to approve the document. If left blank all roles can approve the document.</inlineHelpText>
        <label>Placeholder Approval Roles</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NDOC__Placeholder_Viewer_Roles__c</fullName>
        <description>This field is optional. This is a semicolon-delimited list of roles that are allowed to view and download a specific document, as well as copy its URL and view its version history. If left blank, all roles can view and download the document, as well as copy its URL and view its version history. This field works in tandem with the older Viewer Roles field, which is limited to fewer characters.</description>
        <label>Placeholder Viewer Roles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NDOC__description__c</fullName>
        <description>This field is optional and allows the user to provide a description of the placeholder.</description>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NDOC__neededByStage__c</fullName>
        <description>This field is optional and describes the stage when a document is required.</description>
        <label>Needed By Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Qualification / Application</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Approval / Loan Committee</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Doc Prep</fullName>
                </value>
                <value>
                    <fullName>Doc Review</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NDOC__priority__c</fullName>
        <description>This field is optional. This picklist sets the priority of a closing checklist. It can have values such as Critical, High, Medium, Low, or None.</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Closing Checklist</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Closing Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>